chore: test started, refactoring
