# docs/swagger.json
@@ -152,11 +152,14 @@
     "definitions": {
         "handler.AddDeleteUserSegmentRequest": {
             "type": "object",
+            "required": [
+                "user_id"
+            ],
             "properties": {
                 "to_add": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/model.Segment"
+                        "$ref": "#/definitions/handler.Segment"
                     }
                 },
                 "to_delete": {
@@ -196,6 +199,9 @@
         },
         "handler.AddSegmentRequest": {
             "type": "object",
+            "required": [
+                "name"
+            ],
             "properties": {
                 "name": {
                     "type": "string",
@@ -214,7 +220,7 @@
                 }
             }
         },
-        "model.Segment": {
+        "handler.Segment": {
             "type": "object",
             "properties": {
                 "expires": {
