# internal/app/handler/add_delete_user_segment.go
@@ -1,15 +1,15 @@
 package handler
 
 import (
-	"avito-backend/internal/app/model"
-	"net/http"
+	"context"
+	"fmt"
 )
 
 // AddDeleteUserSegmentRequest example
 type AddDeleteUserSegmentRequest struct {
-	UserId   int             `json:"user_id" example:"1000" format:"integer"`
-	ToAdd    []model.Segment `json:"to_add"`
-	ToDelete []string        `json:"to_delete" example:"SEGMENT1,SEGMENT2" format:"array"`
+	UserId   int       `json:"user_id" validate:"required" example:"1000" format:"integer"`
+	ToAdd    []Segment `json:"to_add"`
+	ToDelete []string  `json:"to_delete" example:"SEGMENT1,SEGMENT2" format:"array"`
 }
 
 // AddDeleteUserSegmentResponse example
@@ -27,12 +27,14 @@ type AddDeleteUserSegmentResponse struct {
 //	@Param request  body AddDeleteUserSegmentRequest true "query params"
 //	@Success		200	{object}	AddDeleteUserSegmentResponse
 //	@Router			/addDeleteUserSegment [put]
-func (h Handler) AddDeleteUserSegmentHandler(w http.ResponseWriter, r *http.Request) {
-	handle(w, r, func(req AddDeleteUserSegmentRequest) (AddDeleteUserSegmentResponse, error) {
-		addedIds, err := h.service.AddDeleteUserSegment(r.Context(), req.UserId, req.ToAdd, req.ToDelete)
-		if err != nil {
-			return AddDeleteUserSegmentResponse{}, err
-		}
-		return AddDeleteUserSegmentResponse{AddedIds: addedIds}, nil
-	})
+func (h Handler) AddDeleteUserSegmentHandler(ctx context.Context, req AddDeleteUserSegmentRequest) (*AddDeleteUserSegmentResponse, error) {
+	toAdd, err := toModelHandlerSlice(req.ToAdd)
+	if err != nil {
+		return nil, fmt.Errorf("troubles with converting structure: %v", err)
+	}
+	addedIds, err := h.service.AddDeleteUserSegment(ctx, req.UserId, toAdd, req.ToDelete)
+	if err != nil {
+		return nil, fmt.Errorf("cannot add and delete segmets from user: %w", err)
+	}
+	return &AddDeleteUserSegmentResponse{AddedIds: addedIds}, nil
 }
